final done only slider left

--- a/testimonials.html
+++ b/testimonials.html
@@ -154,72 +154,7 @@
 
     <main>
         <section>
-            <h1 class="text-center text-orange my-3 font-60">Profile</h1>
-            <div>
-                <div class="mx-0 mx-lg-5 my-3 d-flex justify-content-between align-items-center">
-                    <h4 class="text-orange semibold font-40 mb-0 mb-lg-4">Edit Profile</h4>
-                    <div class="position-relative">
-                        <img src="wwwroot/images/nav-avatar.svg" alt="profile-img" height="78px" style="object-fit: cover;">
-                        <button class="btn p-0">
-                            <img src="wwwroot/images/icon-profile-edit.svg" alt="out-of-stock" class="position-absolute bottom-0"></img>
-                        </button>
-                    </div>
-                </div>
-                <div class="mx-0 mx-lg-5 my-5">
-                    <form class="row g-3">
-                        <div class="col-md-6">
-                          <label for="validationDefault01" class="form-label">First name</label>
-                          <input type="text" class="form-control" id="validationDefault01" placeholder="First Name" value="" required>
-                        </div>
-                        <div class="col-md-6">
-                          <label for="validationDefault02" class="form-label">Last name</label>
-                          <input type="text" class="form-control" id="validationDefault02" placeholder="Last Name" value="" required>
-                        </div>
-                        <div class="col-md-6">
-                            <label for="validationDefault03" class="form-label">Email address</label>
-                            <input type="email" class="form-control" id="validationDefault03" placeholder="Email Address">
-                        </div>
-                        <div class="col-md-6">
-                            <label for="validationDefault04" class="form-label">Contact Number</label>
-                            <input type="text" class="form-control" id="validationDefault04" placeholder="Contact Number" required>
-                        </div>
-                        <div class="col-md-12">
-                            <label for="validationDefault05" class="form-label">Address</label>
-                            <textarea class="form-control" id="validationDefault05" placeholder="Address" rows="3"></textarea>
-                        </div>
-                        <div class="col-md-4">
-                            <label for="validationDefault07" class="form-label">State</label>
-                            <select class="form-select" id="validationDefault07" required>
-                              <option selected disabled value="">Choose...</option>
-                              <option>Gujarat</option>
-                            </select>
-                        </div>
-                        <div class="col-md-4">
-                            <label for="validationDefault06" class="form-label">City</label>
-                            <select class="form-select" id="validationDefault06" required>
-                              <option selected disabled value="">Choose...</option>
-                              <option>Rajkot</option>
-                            </select>
-                        </div>
-                        <div class="col-md-4">
-                          <label for="validationDefault08" class="form-label">Zip</label>
-                          <input type="text" class="form-control" id="validationDefault08" placeholder="Postal Code" required>
-                        </div>
-                        <div class="col-12">
-                          <div class="form-check">
-                            <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
-                            <label class="form-check-label" for="invalidCheck2">
-                                Set As Default Address
-                            </label>
-                          </div>
-                        </div>
-                        <div class="col-12">
-                            <button class="btn btn-3 font-28" type="none">Cancel</button>
-                            <button class="btn btn-2 font-28 semibold" type="submit">Update</button>
-                        </div>
-                      </form>
-                </div>
-            </div>
+            <div class="imprzd-wrapper" id="imprzd-wrapper-section"></div>
         </section>
     </main>
 
@@ -338,6 +273,6 @@
         integrity="sha512-a+SUDuwNzXDvz4XrIcXHuCf089/iJAoN4lmrXJg18XnduKK6YlDHNRalv4yd1N40OKI80tFidF+rqTFKGPoWFQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
     <script src="wwwroot/js/index.js"></script>
-    <script src="wwwroot/js/appsetting.js"></script>  
+    <script src="wwwroot/js/appsetting.js"></script>
 </body>
 </html>
