--- a/product-page.html
+++ b/product-page.html
@@ -220,11 +220,11 @@
                             </div>
                         </div>
                         <div class="d-grid gap-2">
-                            <button class="btn btn-coupon rounded-0 py-4 d-flex flex-column justify-content-start" type="button">
+                            <!-- <button class="btn btn-coupon rounded-0 py-4 d-flex flex-column justify-content-start" type="button">
                                 <h5 class="font-16 bold">APPLY FLAT400</h5>
                                 <p class="font-12 mb-0">Apply FLAT400 at checkout to avail a 400 off !</p>
-                            </button>
-                            <button class="btn btn-2 rounded-0 py-4 text-uppercase" type="button">Select Size</button>
+                            </button> -->
+                            <button class="btn btn-2 rounded-0 py-4 text-uppercase" type="button">Add To Cart</button>
                         </div>
                         <div class="py-3">
                             <div class="accordion accordion-flush" id="accordionFlushExample">
