bind data with api

--- a/product-page.html
+++ b/product-page.html
@@ -224,7 +224,7 @@
                                 <h5 class="font-16 bold">APPLY FLAT400</h5>
                                 <p class="font-12 mb-0">Apply FLAT400 at checkout to avail a 400 off !</p>
                             </button> -->
-                            <button class="btn btn-2 rounded-0 py-4 text-uppercase" type="button">Add To Cart</button>
+                            <button class="btn btn-2 rounded-0 py-4 text-uppercase" type="button" id="btnAddToCart">Add To Cart</button>
                         </div>
                         <div class="py-3">
                             <div class="accordion accordion-flush" id="accordionFlushExample">
