--- a/product-page.html
+++ b/product-page.html
@@ -162,12 +162,39 @@
 
         <section>
             <div class="row g-0 py-5">
-                <div class="col-12 col-lg-7">
-                    <div class="mb-3">
+                <div class="col-12 col-lg-6 text-center">
+                    <div class="mb-4">
                         <img src="https://placehold.co/400x500/FDD1CB/white" class="rounded-0 img-fluid" alt="product-img">
                     </div>
+                    <div class="gallery-wrap mb-4">
+                        <img src="wwwroot/images/product-slider-backbtn.svg" id="backBtn"/>
+                        <div class="gallery">
+                            <div>
+                                <button class="btn-product-color btn rounded-2 p-0 me-2 mb-1">
+                                    <img src="https://placehold.co/100x100/FDD1CB/white" class="rounded-2 img-fluid" alt="product-color-img">
+                                </button>
+                                <button class="btn-product-color btn rounded-2 p-0 me-2 mb-1">
+                                    <img src="https://placehold.co/100x100/FDD1CB/white" class="rounded-2 img-fluid" alt="product-color-img">
+                                </button>
+                                <button class="btn-product-color btn rounded-2 p-0 me-2 mb-1">
+                                    <img src="https://placehold.co/100x100/FDD1CB/white" class="rounded-2 img-fluid" alt="product-color-img">
+                                </button>
+                                <button class="btn-product-color btn rounded-2 p-0 me-2 mb-1">
+                                    <img src="https://placehold.co/100x100/FDD1CB/white" class="rounded-2 img-fluid" alt="product-color-img">
+                                </button>
+                                <button class="btn-product-color btn rounded-2 p-0 me-2 mb-1">
+                                    <img src="https://placehold.co/100x100/FDD1CB/white" class="rounded-2 img-fluid" alt="product-color-img">
+                                </button>
+                                <button class="btn-product-color btn rounded-2 p-0 me-2 mb-1">
+                                    <img src="https://placehold.co/100x100/FDD1CB/white" class="rounded-2 img-fluid" alt="product-color-img">
+                                </button>
+                                
+                            </div>
+                        </div>
+                        <img src="wwwroot/images/product-slider-nextbtn.svg" id="nextBtn"/>
+                    </div>
                 </div>
-                <div class="col-12 col-lg-5">
+                <div class="col-12 col-lg-6">
                     <div>
                         <div class="d-flex justify-content-between border-bottom">
                             <p class="text-orange font-20 bold">Product 1</p>
@@ -176,16 +203,16 @@
                         <div class="border-bottom py-4">
                             <p class="text-orange font-14 bold text-uppercase">Color</p>
                             <div>
-                                <button class="btn p-0 mb-1">
+                                <button class="btn-product-color btn rounded-5 p-0 mb-1">
                                     <img src="https://placehold.co/100x100/FDD1CB/white" class="rounded-5 img-fluid" alt="product-color-img">
                                 </button>
-                                <button class="btn p-0 mb-1">
+                                <button class="btn-product-color btn rounded-5 p-0 mb-1">
                                     <img src="https://placehold.co/100x100/FDD1CB/white" class="rounded-5 img-fluid" alt="product-color-img">
                                 </button>
-                                <button class="btn p-0 mb-1">
+                                <button class="btn-product-color btn rounded-5 p-0 mb-1">
                                     <img src="https://placehold.co/100x100/FDD1CB/white" class="rounded-5 img-fluid" alt="product-color-img">
                                 </button>
-                                <button class="btn p-0 mb-1">
+                                <button class="btn-product-color btn rounded-5 p-0 mb-1">
                                     <img src="https://placehold.co/100x100/FDD1CB/white" class="rounded-5 img-fluid" alt="product-color-img">
                                 </button>
                             </div>
@@ -208,15 +235,15 @@
                                 </p>
                             </div>
                             <div>
-                                <button class="btn-size btn me-2 mb-2">4</button>
-                                <button class="btn-size btn me-2 mb-2">5</button>
-                                <button class="btn-size btn me-2 mb-2">6</button>
-                                <button class="btn-size btn me-2 mb-2">7</button>
-                                <button class="btn-size btn me-2 mb-2">8</button>
-                                <button class="btn-size btn me-2 mb-2">9</button>
-                                <button class="btn-size btn me-2 mb-2">10</button>
-                                <button class="btn-size btn me-2 mb-2">11</button>
-                                <button class="btn-size btn me-2 mb-2">12</button>
+                                <button class="btn-product-size btn me-2 mb-2">4</button>
+                                <button class="btn-product-size btn me-2 mb-2">5</button>
+                                <button class="btn-product-size btn me-2 mb-2">6</button>
+                                <button class="btn-product-size btn me-2 mb-2">7</button>
+                                <button class="btn-product-size btn me-2 mb-2">8</button>
+                                <button class="btn-product-size btn me-2 mb-2">9</button>
+                                <button class="btn-product-size btn me-2 mb-2">10</button>
+                                <button class="btn-product-size btn me-2 mb-2">11</button>
+                                <button class="btn-product-size btn me-2 mb-2">12</button>
                             </div>
                         </div>
                         <div class="d-grid gap-2">
@@ -500,6 +527,28 @@
             </div>
         </div>
     </footer>
+
+    <script>
+        let scrollContainer = document.querySelector(".gallery");
+        let backBtn = document.getElementById("backBtn");
+        let nextBtn = document.getElementById("nextBtn");
+
+        // scrollContainer.addEventListener("wheel",(evt)=>{
+        //     evt.preventDefault();
+        //     scrollContainer.scrollLeft += evt.deltaY;
+        // });
+
+        nextBtn.addEventListener("click",()=>{
+            scrollContainer.style.scrollBehavior = "smooth";
+            scrollContainer.scrollLeft += 700;
+        });
+
+        backBtn.addEventListener("click",()=>{
+            scrollContainer.style.scrollBehavior = "smooth";
+            scrollContainer.scrollLeft -= 700;
+        });
+
+    </script>
     
     <script defer="defer" src="https://www.imprzd.com/bi/in-scol/app.js" inject="true" async test="{}" id="imprzd_SOL" domain="https://www.imprzd.com" api_type="scol" 
         merchantdata="MTg=" 
