--- a/products.html
+++ b/products.html
@@ -57,12 +57,12 @@
                     <a href="cart.html">
                         <img src="wwwroot/images/nav-cart-icon.svg" alt="cart-icon" class="mx-2">
                     </a>
-                    <div class="d-flex flex-column align-items-end mx-3">
+                    <!-- <div class="d-flex flex-column align-items-end mx-3">
                         <p class="m-0 text-orange font-12">Hi Welcome!</p>
                         <p class="m-0 text-orange font-14">Michel</p>
-                    </div>
+                    </div> -->
                     
-                      <div class="btn-group">
+                      <!-- <div class="btn-group">
                         <button type="button" class="btn dropdown-toggle-btn" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
                             <img src="wwwroot/images/nav-avatar.svg" alt="profile-img">
                         </button>
@@ -145,7 +145,7 @@
                             </a>
                           </li>
                         </ul>
-                      </div>
+                      </div> -->
                     
                 </div>
             </div>
@@ -153,7 +153,7 @@
         </div>
     </nav>
 
-  </header>
+</header>
 
   <main>
     <div class="bg-orange-10" style="height: 300px;">
