--- a/products.html
+++ b/products.html
@@ -329,8 +329,8 @@
         </div>
         
       </div>
-      <!-- filterd items tabs div -->
-      <div id="divFilteredItems" class="d-flex gap-4 flex-column flex-md-row align-items-start align-items-md-center mb-3">
+      <!-- filterd items tabs div d-flex when show-->
+      <div id="divFilteredItems" class="d-none gap-4 flex-column flex-md-row align-items-start align-items-md-center mb-3">
         <div class="btn-1 p-2 gap-2 rounded-5 d-flex justify-content-between align-items-center">          
           <span class="text-white bold FilteredItems-head">Size (UK)&nbsp;:&nbsp;</span>
           <span class="text-white bold FilteredItems-size">5&nbsp;(18)</span>
@@ -372,8 +372,8 @@
         <div class="col-12 col-lg-2">
             <h5 class="text-orange bold px-2 font-18">Explore</h5>
             <nav class="nav flex-row flex-lg-column">
-                <a class="nav-link font-12 px-2" href="#">Faq</a>
-                <a class="nav-link font-12 px-2" href="#">Testimonials</a>
+              <a class="nav-link font-12 px-2" href="faq.html">Faq</a>
+              <a class="nav-link font-12 px-2" href="testimonials.html">Testimonials</a>
                 <a class="nav-link font-12 px-2" href="#">Sitemap</a>
                 <a class="nav-link font-12 px-2" href="#">Disclaimer</a>
             </nav>
