--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <!-- deals bar -->
-        <div class="bg-orange-60" style="width: 100%;">
+        <div class="bg-orange-60 d-none" style="width: 100%;">
             <p class="text-white mb-0 py-3 text-center">Summer Sale For All Sports Shoes And Free Express Delivery - OFF 50%!&nbsp;&nbsp;<span class="badge bg-white text-orange">Shop Now</span></p>
         </div>
         <!-- navbar -->
@@ -266,10 +266,10 @@
             <div class="col-12 col-lg-2">
                 <h5 class="text-orange bold px-2 font-18">Contact Us:</h5>
                 <nav class="nav flex-row flex-lg-column">
-                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="#"><img src="wwwroot/images/footer-phone-icon.svg"></img> 01425367802</a>
-                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="#"><img src="wwwroot/images/footer-whatsapp-icon.svg"></img> 01425367802</a>
-                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="#"><img src="wwwroot/images/footer-mail-icon.svg"></img> test@gmail.com</a>
-                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="#"><img src="wwwroot/images/footer-web-icon.svg"></img> www.test.com</a>
+                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="#"><img src="wwwroot/images/footer-phone-icon.svg"></img> 044 28363101</a>
+                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="#"><img src="wwwroot/images/footer-whatsapp-icon.svg"></img> 97907 04282</a>
+                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="#"><img src="wwwroot/images/footer-mail-icon.svg"></img> domestic@gaitonde.com</a>
+                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="#"><img src="wwwroot/images/footer-web-icon.svg"></img> www.gaitonde.com</a>
                 </nav>
             </div>
         </div>
@@ -322,7 +322,7 @@
             imprzd_post_desc_font_size="16"
             imprzd_post_desc_font_weight="400"
             imprzd_container_color="#FFF"
-            imprzd_container_shadow_color="#ffffffaf"
+            imprzd_container_shadow_color="#ffffffaf",
             google_font_link="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
             display_customer_name="true"
             display_product_name="true"
