--- a/product-page.html
+++ b/product-page.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <!-- deals bar -->
-        <div class="bg-orange-60" style="width: 100%;">
+        <div class="bg-orange-60 d-none" style="width: 100%;">
             <p class="text-white mb-0 py-3 text-center">Summer Sale For All Sports Shoes And Free Express Delivery - OFF 50%!&nbsp;&nbsp;<span class="badge bg-white text-orange">Shop Now</span></p>
         </div>
         <!-- navbar -->
@@ -168,12 +168,8 @@
                     </div>
                     <div class="gallery-wrap mb-4">
                         <img src="wwwroot/images/product-slider-backbtn.svg" id="backBtn"/>
-                        <div class="gallery">
-                            <div>
-                                <button class="btn-product-color btn rounded-2 p-0 me-2 mb-1" type="button">
-                                    <img src="https://placehold.co/100x100/FDD1CB/white" class="rounded-2 img-fluid" alt="product-color-img">
-                                </button>
-                            </div>
+                        <div class="gallery" id="divImageSlider">
+                            
                         </div>
                         <img src="wwwroot/images/product-slider-nextbtn.svg" id="nextBtn"/>
                     </div>
@@ -493,10 +489,10 @@
             <div class="col-12 col-lg-2">
                 <h5 class="text-orange bold px-2 font-18">Contact Us:</h5>
                 <nav class="nav flex-row flex-lg-column">
-                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="#"><img src="wwwroot/images/footer-phone-icon.svg"></img> 01425367802</a>
-                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="#"><img src="wwwroot/images/footer-whatsapp-icon.svg"></img> 01425367802</a>
-                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="#"><img src="wwwroot/images/footer-mail-icon.svg"></img> test@gmail.com</a>
-                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="#"><img src="wwwroot/images/footer-web-icon.svg"></img> www.test.com</a>
+                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="#"><img src="wwwroot/images/footer-phone-icon.svg"></img> 044 28363101</a>
+                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="#"><img src="wwwroot/images/footer-whatsapp-icon.svg"></img> 97907 04282</a>
+                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="#"><img src="wwwroot/images/footer-mail-icon.svg"></img> domestic@gaitonde.com</a>
+                    <a class="nav-link d-flex align-items-center gap-2 font-12 px-2" href="#"><img src="wwwroot/images/footer-web-icon.svg"></img> www.gaitonde.com</a>
                 </nav>
             </div>
         </div>
