--- a/return-exchange.html
+++ b/return-exchange.html
@@ -32,7 +32,7 @@
                             <a class="nav-link" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Gaitonde</a>
+                            <a class="nav-link" href="gaitonde.html">Gaitonde</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="products.html">Products</a>
@@ -48,12 +48,18 @@
                         </li>
                     </ul>
                     <div class="position-relative d-flex justify-content-center align-items-center me-0">
-                        <a href="javascript:void{0};">
+                        <!-- <a href="javascript:void{0};">
                             <img src="wwwroot/images/nav-wishlist-icon.svg" alt="wishlist-icon" class="mx-2">
-                        </a>
-                        <a href="cart.html">
+                        </a> -->
+                        <a href="cart.html" class="btn p-0 position-relative">
+                            <span class="position-absolute translate-middle badge rounded-circle bg-orange-60" style="left: 38px; top: 8px;">
+                                3
+                            </span>
                             <img src="wwwroot/images/nav-cart-icon.svg" alt="cart-icon" class="mx-2">
                         </a>
+                        <!-- <a href="cart.html">
+                            <img src="wwwroot/images/nav-cart-icon.svg" alt="cart-icon" class="mx-2">
+                        </a> -->
                         <!-- <div class="d-flex flex-column align-items-end mx-3">
                             <p class="m-0 text-orange font-12">Hi Welcome!</p>
                             <p class="m-0 text-orange font-14">Michel</p>
